# javelin-taipo

./: LICENSE  README.md  install.md  javelin-taipo.javelin-script  key_trigger_scripts.javelin-script  pyproject.toml  todo_issues.md
1_input_reference/: keymap_extract_from_docs_corrected.md
2_generate_parts/: generate_keypress_script.py  generate_keystring_script.py  generate_prefab_script.py  include_mask.csv  key_prefab_scripts.javelin-script  keymap.csv  keystring_list.javelin-script
2_generate_parts/ad-hoc/: TT_LHS_map.csv  TT_RHS_map.csv  TT_concept_map.csv  TT_strict_map.csv  checking_list.csv  checking_list­_edited.csv  drill_keys.csv  keymap_tangybbq.csv  step3_rs_to_csv.py  step4_compare_md_rs.py  step5_csv_to_checking_list.py  step6_taipo_to_typey.py  used_keys.csv
3_javelin_inputs/: Starboard.javelin-layout  Starboard.javelin-script  javelin-taipo.javelin-script  key_trigger_scripts.javelin-script
firmware/starboard/: Starboard.javelin-layout  Starboard.javelin-script
keymap/: compare_md_rs.csv  first_import.py  include_mask.csv  keymap.csv  keymap_extract.md  keystring_list.javelin-script  step1_md_to_csv.py  step2_csv_to_javelin-script.py  step5_csv_to_checking_list.py
training/typey-type-resources/: LHS_tt_drill.csv  RHS_tt_drill.csv
