[tool.poetry]
name = "javelin-taipo"
version = "0.1.0"
description = ""
authors = ["kasparless <165455886+kasparless@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
duckdb = "^1.1.3"
pandas = "^2.2.3"
jupysql = "^0.10.16"
pyprql = "^0.12.1"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
